hw7/api-gateway/nginx-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw7-order-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /(order.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: hw7-order-app-service
              port:
                number: 8082
